--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,8 +1,10 @@
 includes:
     - phpstan-baseline.neon
+    - vendor/larastan/larastan/extension.neon
+    - vendor/nesbot/carbon/extension.neon
 
 parameters:
-    level: 5
+    level: 6
     paths:
         - src
         - config
