♻️ refactor(tests, models, composer): Improve testing setup and fix code style issues.  Updated dependencies and addressed minor code style inconsistencies.

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "larastan/larastan": "^3.2",
         "laravel/pint": "^1.14",
         "nunomaduro/collision": "^8.1.1||^7.10.0",
-        "orchestra/testbench": "^9.0|^10.1",
+        "orchestra/testbench": "*",
         "pestphp/pest": "^3.0",
         "pestphp/pest-plugin-arch": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.0",
@@ -51,8 +51,7 @@
     "scripts": {
         "post-autoload-dump": [
             "@clear",
-            "@prepare",
-            "@composer run prepare"
+            "@prepare"
         ],
         "prepare": "@php vendor/bin/testbench package:discover --ansi",
         "analyse": "vendor/bin/phpstan analyse --memory-limit=2G",
