--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,7 +6,7 @@
     bootstrap="vendor/autoload.php"
     colors="true"
     processIsolation="false"
-    stopOnFailure="false"
+    stopOnFailure="true"
     executionOrder="random"
     failOnWarning="true"
     failOnRisky="true"
@@ -19,6 +19,9 @@
         <testsuite name="MarJose123 Test Suite">
             <directory>tests</directory>
         </testsuite>
+        <testsuite name="Feature">
+            <directory suffix="Test.php">tests/Feature</directory>
+        </testsuite>
     </testsuites>
     <logging>
         <junit outputFile="build/report.junit.xml"/>
@@ -28,4 +31,7 @@
             <directory suffix=".php">./src</directory>
         </include>
     </source>
+    <php>
+        <env name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
+    </php>
 </phpunit>
