--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "php": "^8.3|^8.4",
         "spatie/laravel-package-tools": "^1.16",
-        "laravel/framework": "^11.15||^12.0"
+        "laravel/framework": "^11.15||^12.0",
+        "ext-bcmath": "*"
     },
     "require-dev": {
         "larastan/larastan": "^3.2",
